# dynamic_title

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  LICENSE-APACHE  LICENSE-MIT  MIGRATION.md  PLANS.md  README.md  TASK_STATUS.md  dynamic-title-bg.example.ini
_Asset/gfx/: 05_000_title.gfx  05_001_title_logo.gfx
_Tools/bk2-to-mp4/: BK2ToMP4.bat  BK2ToMP4.ps1  README.md
legacy_unused_rs/: README.md  dx12_draw_probe.rs  engine_flag_probe.rs  native_movie.rs  systex_movie.rs  video.rs
src/: bink_probe.rs  dx12_title_texture.rs  lib.rs
